#:schema https://json.schemastore.org/pyproject.json

[project]
name = "beets-filetote"
version = "1.3.6"
description = "A beets plugin to copy/moves non-music extra files, attachments, and artifacts during the import process."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gavin Tronset", email = "gtronset@gmail.com" }]
keywords = ["beets", "files", "artifacts", "extra"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["beets>=2.4.0", "mediafile>=0.12.0"]

[project.urls]
"Release notes" = "https://github.com/gtronset/beets-filetote/releases"
"Source" = "https://github.com/gtronset/beets-filetote"
"Repository" = "https://github.com/gtronset/beets-filetote"
"Documentation" = "https://github.com/gtronset/beets-filetote"

[dependency-groups]
dev = ["toml>=0.10.2", "reflink>=0.2.1"]
lint = [
    "mypy>=1.19,<3.0",
    "ruff>=0.15.0,<1.0.0",
    "semgrep>=1.168.0",
]
test = [
    "pytest>=8,<10",
    "typeguard>=4.4.0,<5.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
]


[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "beetsplug"
module-root = ""
namespace = true

[tool.mypy]
mypy_path = ["./typehints"]
modules = ["beetsplug", "tests.pytest_beets_plugin"]
explicit_package_bases = true
strict = true
pretty = true

[tool.pytest]
testpaths = ["./tests"]
filterwarnings = ["ignore::DeprecationWarning:.*confuse"]
log_level = "DEBUG"
log_cli = false
log_format = "%(name)s %(levelname)s %(message)s"

[tool.ruff]
line-length = 88
# namespace-packages = ["beetsplug"]
preview = true
src = ["beetsplug", "tests", "typehints"]
target-version = "py310"

[tool.ruff.lint]
ignore = ["D205", "PLR6301"]
extend-select = [
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle
    "F",    # pyflakes
    "FA",   # flake8-future-annotations
    "B",    # flake8-bugbear
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # perflint
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "RUF",  # ruff
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "TD",   # flake8-todos
    "TC",   # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "PTH",  # flake8-use-pathlib
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
lines-between-types = 1
known-local-folder = ["tests"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["assert*", "getLogger"]

[tool.ruff.lint.per-file-ignores]
"beetsplug/**" = ["PT"]
"tests/**" = ["PLR0917", "RUF076"]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.tox]
requires = ["tox>=4.22"]
min_version = "4.22"
env_list = [
    "3.10",
    "3.11",
    "3.12",
    "3.13",
    "3.14",
    "beets-2_4",
    "beets-2_5",
    "beets-2_6",
    "beets-2_7",
    "beets-2_8",
    "beets-2_9",
    "beets-2_10",
    "beets-2_11",
    "beets-master",
]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
package = "skip"
allowlist_externals = ["uv"]
set_env = { PIP_ONLY_BINARY = "llvmlite,numba" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--group",
        "dev",
        "--group",
        "test",
    ],
]
commands = [
    [
        "uv",
        "run",
        "--active",
        "--no-sync",
        "pytest",
        "-n",
        "auto",
        "tests",
        "--typeguard-packages=beetsplug",
    ],
]

[tool.tox.env.beets-2_4]
description = "Test with beets~=2.4.0"
set_env = { PIP_ONLY_BINARY = "llvmlite,numba", BEETS_SPEC = "beets~=2.4.0" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--no-install-package",
        "beets",
        "--group",
        "dev",
        "--group",
        "test",
    ],
    [
        "uv",
        "pip",
        "install",
        "--python",
        "{envpython}",
        "{env:BEETS_SPEC}",
    ],
]

[tool.tox.env.beets-2_5]
description = "Test with beets~=2.5.0"
set_env = { PIP_ONLY_BINARY = "llvmlite,numba", BEETS_SPEC = "beets~=2.5.0" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--no-install-package",
        "beets",
        "--group",
        "dev",
        "--group",
        "test",
    ],
    [
        "uv",
        "pip",
        "install",
        "--python",
        "{envpython}",
        "{env:BEETS_SPEC}",
    ],
]

[tool.tox.env.beets-2_6]
description = "Test with beets~=2.6.0"
set_env = { PIP_ONLY_BINARY = "llvmlite,numba", BEETS_SPEC = "beets~=2.6.0" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--no-install-package",
        "beets",
        "--group",
        "dev",
        "--group",
        "test",
    ],
    [
        "uv",
        "pip",
        "install",
        "--python",
        "{envpython}",
        "{env:BEETS_SPEC}",
    ],
]

[tool.tox.env.beets-2_7]
description = "Test with beets~=2.7.0"
set_env = { PIP_ONLY_BINARY = "llvmlite,numba", BEETS_SPEC = "beets~=2.7.0" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--no-install-package",
        "beets",
        "--group",
        "dev",
        "--group",
        "test",
    ],
    [
        "uv",
        "pip",
        "install",
        "--python",
        "{envpython}",
        "{env:BEETS_SPEC}",
    ],
]

[tool.tox.env.beets-2_8]
description = "Test with beets~=2.8.0"
set_env = { PIP_ONLY_BINARY = "llvmlite,numba", BEETS_SPEC = "beets~=2.8.0" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--no-install-package",
        "beets",
        "--group",
        "dev",
        "--group",
        "test",
    ],
    [
        "uv",
        "pip",
        "install",
        "--python",
        "{envpython}",
        "{env:BEETS_SPEC}",
    ],
]

[tool.tox.env.beets-2_9]
description = "Test with beets~=2.9.0"
set_env = { PIP_ONLY_BINARY = "llvmlite,numba", BEETS_SPEC = "beets~=2.9.0" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--no-install-package",
        "beets",
        "--group",
        "dev",
        "--group",
        "test",
    ],
    [
        "uv",
        "pip",
        "install",
        "--python",
        "{envpython}",
        "{env:BEETS_SPEC}",
    ],
]

[tool.tox.env.beets-2_10]
description = "Test with beets~=2.10.0"
set_env = { PIP_ONLY_BINARY = "llvmlite,numba", BEETS_SPEC = "beets~=2.10.0" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--no-install-package",
        "beets",
        "--group",
        "dev",
        "--group",
        "test",
    ],
    [
        "uv",
        "pip",
        "install",
        "--python",
        "{envpython}",
        "{env:BEETS_SPEC}",
    ],
]

[tool.tox.env.beets-2_11]
description = "Test with beets~=2.11.0"
set_env = { PIP_ONLY_BINARY = "llvmlite,numba", BEETS_SPEC = "beets~=2.11.0" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--no-install-package",
        "beets",
        "--group",
        "dev",
        "--group",
        "test",
    ],
    [
        "uv",
        "pip",
        "install",
        "--python",
        "{envpython}",
        "{env:BEETS_SPEC}",
    ],
]

[tool.tox.env.beets-master]
description = "Test with beets from master branch"
base_python = ["3"]
set_env = { PIP_ONLY_BINARY = "llvmlite,numba", BEETS_SPEC = "beets@git+https://github.com/beetbox/beets.git@master" }
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--no-install-project",
        "--no-install-package",
        "beets",
        "--group",
        "dev",
        "--group",
        "test",
    ],
    [
        "uv",
        "pip",
        "install",
        "--python",
        "{envpython}",
        "{env:BEETS_SPEC}",
    ],
]

[tool.tox.env.lint]
description = "Lint source code"
package = "skip"
allowlist_externals = ["uv"]
commands_pre = [["uv", "sync", "--active", "--frozen", "--group", "lint"]]
commands = [["uv", "run", "--active", "ruff", "check"]]

[tool.tox.env.lint-fix]
description = "Fixes and lint issues in source code"
package = "skip"
allowlist_externals = ["uv"]
commands_pre = [["uv", "sync", "--active", "--frozen", "--group", "lint"]]
commands = [["uv", "run", "--active", "ruff", "check", "--fix"]]

[tool.tox.env.format]
description = "Formats source code"
package = "skip"
allowlist_externals = ["uv"]
commands_pre = [["uv", "sync", "--active", "--frozen", "--group", "lint"]]
commands = [["uv", "run", "--active", "ruff", "format"]]

[tool.tox.env.mypy]
description = "Checks types in source code"
package = "skip"
allowlist_externals = ["uv"]
commands_pre = [
    [
        "uv",
        "sync",
        "--active",
        "--frozen",
        "--group",
        "lint",
        "--group",
        "test",
    ],
]
commands = [["uv", "run", "--active", "mypy"]]
