[metadata]
name = beets-filetote
version = attr: beetsplug.__version__
url = https://github.com/gtronset/beets-filetote
author = Gavin Tronset
author_email = gtronset@gmail.com
description = An updted beets plugin to copy non-music files to import path.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Players :: MP3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://github.com/gtronset/beets-filetote
    Release notes = https://github.com/gtronset/beets-filetote/releases
    Source = https://github.com/gtronset/beets-filetote

[options]
python_requires = >=3.6
packages = beetsplug
include_package_data = true
zip_safe = false
install_requires =
    beets>=1.4.7
    mediafile==0.10.0
