[metadata]
name = beets-filetote
version = attr: beetsplug.__version__
url = https://github.com/gtronset/beets-filetote
author = Gavin Tronset
author_email = gtronset@gmail.com
description = A beets plugin to copy/moves non-music extra files, attachments, and artifacts during the import process.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Players :: MP3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://github.com/gtronset/beets-filetote
    Release notes = https://github.com/gtronset/beets-filetote/releases
    Source = https://github.com/gtronset/beets-filetote

[options]
python_requires = >=3.6
packages = beetsplug
include_package_data = true
zip_safe = false
install_requires =
    beets>=1.4.7
    mediafile==0.10.0

[flake8]
max-line-length = 88
extend-ignore = E203
